fixed detective image. window resize caused the image to over stretch.

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,8 @@
   text-align: left;
   border: 3px solid green;
   width: 100%;
-  height: 100%;
+
+  display: flex;
 }
 .top-col > .content {
   background-color: gray;
